--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
     body {
         font-family: Arial, sans-serif;
-        background-color: #f8f8f8;
+        background: linear-gradient(to right, #ff7eb3, #ff65a3);
         margin: 0;
         padding: 0;
     }
@@ -15,16 +15,15 @@
         max-width: 800px;
         margin: 20px auto;
         padding: 20px;
-        background-color: #fff;
+        background: linear-gradient(to right, #ff65a3, #ff7eb3);
         border-radius: 5px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        color: #fff;
     }
     h1 {
-        color: #333;
         text-align: center;
     }
     p {
-        color: #666;
         line-height: 1.6;
     }
 </style>
