--- a/index.html
+++ b/index.html
@@ -6,24 +6,35 @@
 <title>艾依扎提的个人页面</title>
 <style>
     body {
-        font-family: Arial, sans-serif;
-        background: linear-gradient(to right, #ff7eb3, #ff65a3);
+        font-family: 'Arial', sans-serif;
+        background: linear-gradient(to right, #ff87a2, #ff5e78);
         margin: 0;
         padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
     }
     .container {
+        width: 80%;
         max-width: 800px;
-        margin: 20px auto;
         padding: 20px;
-        background: linear-gradient(to right, #ff65a3, #ff7eb3);
-        border-radius: 5px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        color: #fff;
-    }
-    h1 {
+        background: #fff;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         text-align: center;
     }
+    h1 {
+        color: #ff5e78;
+    }
+    h2 {
+        color: #ff87a2;
+        border-bottom: 2px solid #ff87a2;
+        padding-bottom: 5px;
+        margin-top: 20px;
+    }
     p {
+        color: #333;
         line-height: 1.6;
     }
 </style>
