--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
     body {
         font-family: 'Arial', sans-serif;
-        background: linear-gradient(to right, #ff87a2, #ff5e78);
+        background: linear-gradient(to right, #ffdde1, #ffced2);
         margin: 0;
         padding: 0;
         display: flex;
@@ -21,7 +21,7 @@
         padding: 20px;
         background: #fff;
         border-radius: 10px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1);
         text-align: center;
     }
     h1 {
@@ -49,12 +49,12 @@
         <h2>个人简介</h2>
         <p>你可以在这里添加你的个人简介内容。</p>
         
-        <h2>兴趣爱好</h2>
-        <p>你可以在这里列出你的兴趣爱好。</p>
+        <h2>喜好</h2>
+        <p>喜欢摸牛牛，舌吻</p>
         
         <h2>联系方式</h2>
-        <p>邮箱：example@example.com</p>
-        <p>电话：123-456-7890</p>
+        <p>WeChat：ayzat1124</p>
+        <p>电话：17794955698</p>
     </div>
 </body>
 </html>
