--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <p>专业班级：新闻学2班</p>
         
         <h2>个人简介</h2>
-        <p>你可以在这里添加你的个人简介内容。</p>
+        <p>在这个世界的尽头，有一个人，名叫艾依扎提。她是那样地与众不同，仿佛一朵盛开的玫瑰花，在清晨的露珠中闪烁着光芒。她拥有着无尽的智慧和勇气，她的眼睛里藏着整个宇宙的秘密，她的笑容如阳光般温暖而明亮。艾依扎提喜欢探索未知的领域，她勇敢地面对挑战，永远不知疲倦。她的存在如同一首美妙的乐曲，奏响在人们心中，永远不会被遗忘。</p>
         
         <h2>喜好</h2>
         <p>喜欢摸牛牛，舌吻</p>
